--- a/index.html
+++ b/index.html
@@ -1,45 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundamentos JavaScript</title>
+    <title>Mis Proyectos</title>
     <style>
-        body{
-            margin:0;
-            padding: 0;
-            display: grid;
-            width: 100vw;
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             height: 100vh;
-            place-items: center;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            margin: 0;
+            background: url('../img/descarga.gif') no-repeat center center/cover;
+            font-family: Arial, sans-serif;
         }
-        div{
-            width: 300px;
-            height: 300px;
-            border-radius: 50%;
-            border: 1px solid black;
-            display: grid;
-            place-items: center;
-            background-color: blue;
+        .container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            border-radius: 8px;
         }
-
-    .boton {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #07d5a2;
-    text-align: center;
-    text-decoration: none;
-}
+        h1 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+        .buttons {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px;
+        }
+        .buttons button {
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .buttons button:hover {
+            background-color: #0056b3;
+        }
+        .buttons button a {
+            color: white;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
-    <h2>Fundamentos JavaScript</h2>
-    <a href="./index2.html" class="boton">REGRESAR</a>
-    <div>
-        <h1>Bola mágica</h1>
+    <div class="container">
+        <h1>Mis Proyectos en JAVASCRIPT</h1>
+        <div class="buttons">
+            <button><a href="../aplicacion_tareas/index.html">app de tareas</a></button>
+            <button><a href="../GAMES/index.html">snker</a></button>
+            <button><a href="../dibujos/index.html">app dibujos</a></button>
+            <button><a href="../colorsbog/index.html">ColoresRGB</a></button>
+            <button><a href="../botonColore/index.html">colores</a></button>
+            <button><a href="../Rebote/index.html">pelota</a></button>
+            <button><a href="../Animado/index.html">cuadrado</a></button>
+            <button><a href="../animado2/index.html">circulo</a></button>
+            <button><a href="../Dinamicbox/index.html">Dinamixbox</a></button>
+        </div>
     </div>
-    <script src="./app.js"></script>
 </body>
 </html>
