--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
     <div class="container">
         <h1>Mis Proyectos en JAVASCRIPT</h1>
         <div class="buttons">
-            <button><a href="../aplicacion_tareas/index.html">app de tareas</a></button>
-            <button><a href="../GAMES/index.html">snker</a></button>
-            <button><a href="../dibujos/index.html">app dibujos</a></button>
-            <button><a href="../colorsbog/index.html">ColoresRGB</a></button>
-            <button><a href="../botonColore/index.html">colores</a></button>
-            <button><a href="../Rebote/index.html">pelota</a></button>
-            <button><a href="../Animado/index.html">cuadrado</a></button>
-            <button><a href="../animado2/index.html">circulo</a></button>
-            <button><a href="../Dinamicbox/index.html">Dinamixbox</a></button>
+            <button><a href="./aplicacion_tareas/index.html">app de tareas</a></button>
+            <button><a href="./GAMES/index.html">snker</a></button>
+            <button><a href="./dibujos/index.html">app dibujos</a></button>
+            <button><a href="./colorsbog/index.html">ColoresRGB</a></button>
+            <button><a href="./botonColore/index.html">colores</a></button>
+            <button><a href="./Rebote/index.html">pelota</a></button>
+            <button><a href="./Animado/index.html">cuadrado</a></button>
+            <button><a href="./animado2/index.html">circulo</a></button>
+            <button><a href="./Dinamicbox/index.html">Dinamixbox</a></button>
         </div>
     </div>
 </body>
