--- a/colorsbog/index.html
+++ b/colorsbog/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>MODIFICAR  COLOR</h1>
-    <button><a href="../inicio/index.html">Regresar</a></button>
+    <button><a href="./inicio/index.html">Regresar</a></button>
     <button id="btnchange">Cambiar color</button>
     <script src="./app.js"></script>
 </body>
