--- a/GAMES/index.html
+++ b/GAMES/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="container">
-        <button><a href="../inicio/index.html">regresar</a></button>
+        <button><a href="./inicio/index.html">regresar</a></button>
         <h1>SNAKE</h1>
         <canvas id="lienzo" width="600" height="400"></canvas>
     </div>
