--- a/Animado/index.html
+++ b/Animado/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="container">
-        <button><a href="../inicio/index.html">regresar</a></button>
+        <button><a href="./inicio/index.html">regresar</a></button>
         <h1>RECTANGULO</h1>
         <canvas id="lienzo" width="400" height="400"></canvas>
     </div>
