--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('./img/descarga.gif') no-repeat center center/cover;
+            background: url('../img/descarga.gif') no-repeat center center/cover;
             font-family: Arial, sans-serif;
         }
         .container {
